[project]
name = "lambda-handler"
version = "0.1.0"
requires-python = "==3.11.*"

dependencies = [
    "psycopg2-binary==2.9.9",
    "yt-dlp==2025.10.22",
    "ffmpeg"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["functions/process-worker"]
include = ["process_worker*"]